src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
/* ... */
/*
    Call to Action
*/

.call-to-action {
    background-color: transparentize($primary-color, .95);
    border-radius: 2px;
    min-height: 5rem;
    padding: 1rem;

    span {
        font-size: 1rem;
    }

    .button {
        float: right;
        margin: 0;
        width: 25%;

        @media #{$medium-only} {
            width: 30%;
        }

        @media #{$small-only} {
            width: 40%;
        }
    }
}

/*
    Hide certain things from non-managers
*/
.is-not-manager {

    // file upload manager
    .redactor-toolbar .re-file {
        display: none;
    }

    // daily ticket statistics
    .field-daily_ticket_statistics {
        display: none;
    }
}

/*
    Periods view
*/
.periods {
    td {
        color: $charcoal;
        vertical-align: top;
    }

    .active {
        td {
            color: $jet;

            &:first-child {
                border-left: 10px solid $primary-color;
            }
        }
    }
}


/*
    Enrollment
*/

.enroll-form {
    h2 {
        font-size: $h2-font-size - $h2-font-reduction;
        margin: .5rem 0;
    }
}


/*
    My bookings
*/

.my-bookings {

    > .print-icon {
        margin-top: -5px;
    }

    .icon-male::before {
        @include icon('\f222');

        left: 2.25rem;
        position: absolute;
    }

    .icon-female::before {
        @include icon('\f221');

        left: 2.25rem;
        position: absolute;
    }

    .attendee-bookings {
        .alert-box {
            margin-bottom: 0;
        }

        .print-icon {
            position: absolute;
            right: 32px;
            top: 24px;
        }

        h3 {
            background-color: $white-smoke;
            border: 1px solid $gainsboro;
            border-radius: 2px 2px 0 0;
            border-width: 1px 1px 0;
            font-size: 1.4rem;
            font-weight: 500;
            margin: 0;

            // 8.3333% is 1000 (row-width) / 12 (number of rows)
            // -> one column wide in percentage
            padding: .75rem 1rem .75rem 8.3333%;
        }

        .booking-limit {
            background-color: lighten($yellow-pastel, 5%);
            border: 1px solid $gainsboro;
            font-size: .875rem;
            line-height: .875rem;
            padding: .5rem 3.5rem;
        }

        ul {
            list-style: none;
            margin: 0;
            padding: 0;

            li {
                margin-bottom: .5rem;
            }
        }

        > ul {
            background-color: $white;
            border: 1px solid $gainsboro;
            border-radius: 0 0 2px 2px;
            border-width: 0 1px 1px;
            box-shadow: 3px 3px 5px $white-smoke;
            margin-bottom: 1.5rem;
            padding: .5rem 0 .25rem;
        }

        .total-costs {
            background: $white-smoke;
            border: 1px solid $gainsboro;
            border-radius: 2px;
            border-width: 0 1px 1px;
            box-shadow: 3px 3px 5px $white-smoke;
            font-family: $font-family-monospace;
            margin-bottom: 1.5rem;
            margin-top: -1.5rem;
            padding: .75rem 1.2rem .75rem 8.3333%;
            position: relative;
            top: -1px;

            .columns:last-child {
                text-align: right;
            }
        }

        .total {
            font-weight: bold;
        }

        .cost {
            font-family: $font-family-monospace;
            font-size: .875rem;
            position: absolute;
            right: 1rem;
            top: .5rem;
        }

        .fa-star-o,
        .fa-star {
            font-size: 1.5rem;
            padding: 2px 0;
        }

        .fa-star-o {
            color: $base;
        }

        .fa-star {
            color: $yellow;
        }
    }

    h4 {
        font-size: 1.2rem;
        font-weight: 500;
        margin-bottom: .25rem;
        max-width: 80%;
    }

    .occasion {
        font-size: .875rem;
        margin-bottom: .1rem;


        > ul {
            margin-bottom: .25rem;

            li {
                font-size: .875rem;
                margin-bottom: 0;
            }
        }
    }

    .operability-warning {
        font-size: .8rem;
        padding-top: .15rem;

        &:before {
            @include icon('\f06a');
            color: $orange-dark;
            margin: 0 1ex;
        }
    }

    .state {
        background-color: $aluminum;
        border-radius: 5px;
        color: $white;
        display: inline-block;
        font-size: .8rem;
        margin-bottom: .5rem;
        padding: 0 6px;

        &.cancelled {
            background-color: $red;
        }

        &.denied {
            background-color: $alert-color;
        }

        &.accepted {
            background-color: $success-color;
        }
    }

    .non-operable .state.accepted {
        background-color: $orange;
    }

    .actions {
        ul {
            margin: 0;

            li {
                font-size: .875rem;
                margin: 0;

                &:after {
                    color: $body-font-color;
                    content: ' | ';
                }

                &:first-child:after {
                    content: '';
                }
            }
        }
    }
}
/* ... */

